<resources>
    <string name="app_name" translatable="false">IRemember</string>
    <string name="ok">                  Ok                          </string>
    <string name="cancel">              Cancel                      </string>
    <string name="understand">          Understand                  </string>
    <string name="later">               Later                       </string>
    <string name="next">                Next                        </string>
    <string name="finish">              Finish                      </string>
    <string name="defaultLabel">        Default                     </string>
    <string name="restart">             Restart                     </string>
    <string name="never">               Never                       </string>
    <string name="lastSync">            Last sync                   </string>
    <string name="skip">                Skip                        </string>
    <string name="done">                Done                        </string>
    <string name="enabled">             Enabled                     </string>
    <string name="onceEvery">           once every                  </string>
    <string name="days">                days                        </string>
    <string name="date">                Date                        </string>
    <string name="time">                Time                        </string>
    <string name="createCategory">      Create category             </string>



    <string name="welcome_title">Welcome</string>
    <string name="welcome_app_descr">This app will help you not to forget anything important to you.</string>

    <string name="change_language">Change language</string>
    <string name="choose_language_title">Choose your language</string>
    <string name="change_language_descr">You can change language here</string>
    <string name="language">Language</string>
    <string name="changeLanguageNeedRestart_title">A reboot is required</string>
    <string name="changeLanguageNeedRestart_descript">To change the language needs to be rebooted</string>
    <string name="canDoneLaterOnMenu">This can be done later in the settings menu</string>

    <string name="languageEnLabel" translatable="false">     English                     </string>
    <string name="languageRuLabel" translatable="false">     Русский                     </string>
    <string name="currentLanguage">   English   </string>

    <string name="sign_in_google_descr">Sign in Google for safe data storage and recovery</string>
    <string name="sign_in_google">Sign-In Google</string>
    <string name="sign_in">Sign-In</string>

    <string name="sign_out">Sign-Out</string>
    <string name="youAreSignedInAs">You are signed in Google as: </string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_share">Share app</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_create_category">New category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="spaceholder_accountName">Not logged in</string>
    <string name="spaceholder_accountEmail" />
    <string name="spaceholder_lastSync">Last sync</string>
    <string name="notification">Notification</string>
    <string name="notification_caption">Show push-notification</string>

    <!-- TIMES -->
    <string name="seconds_ago">" seconds ago"</string>
    <string name="minutes_ago">" minutes ago"</string>
    <string name="hours_ago">" hours ago"</string>
    <string name="days_ago">" days ago"</string>
    <string name="weeks_ago">\" weeks ago\"</string>
    <string name="months_ago">" months ago"</string>
    <string name="years_ago">\" years ago\"</string>
    <string name="at_date" />
    <string name="at_time">at</string>
    <string name="today">today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1_headline">Welcome to my first app</string>
    <string name="intro2_headline">There will be tutorial</string>
    <string name="intro3_headline">There will be authentication</string>
    <string name="title_new_category">New category</string>

    <string name="iconPicker_tabIcon">Icon</string>
    <string name="iconPicker_tabColor">Color</string>

    <string name="hint_cat_enterName">Enter category name</string>
    <string name="hint_cat_name">Category name</string>
    <string name="hint_cat_type">Category type</string>
    <string name="condition">Condition </string>

    <string name="initialValue">Initial value</string>
    <string name="finalValue">Final value</string>
    <string name="everageValueCalculate">Calculate automatically</string>
    <string name="everageValueCalculate_for">for</string>
    <string name="everageValueCalculate_operations">operations</string>
    <string name="hint_finalValueOptional">If it is needed</string>
    <string name="hint_cat_mean_value_per_day">Mean value per day</string>
    <string name="unitLabel">Unit</string>
    <string name="unitLabel_hint">Unit</string>
    <string name="everage_value">Everage value</string>
    <string name="prediction_label">Prediction</string>
    <string name="everageValue">Everage value</string>
    <string name="dialogTitle_chooseIcon">Chooise icon</string>

    <string name="error_need_select_condition">Need to select condition</string>
    <string name="error_need_cat_name">Enter the category name</string>
    <string name="error_need_cat_unit">Enter the unit name</string>

    <string-array name="items_cat_condition">
        <item>Unit</item>
        <item>Date</item>
        <item>Date Time</item>
    </string-array>

    <string-array name="items_everageEventCount">
        <item>for 2 last events</item>
        <item>for 3 last events</item>
        <item>for 5 last events</item>
        <item>for 7 last events</item>
        <item>for 10 last events</item>
        <item>for 20 last events</item>
        <item>for 30 last events</item>
        <item>for 365 last events</item>
    </string-array>

    <string-array name="items_predictionPeriod">
        <item>once every 1 day</item>
        <item>once every 2 days</item>
        <item>once every 3 days</item>
        <item>once every 4 days</item>
        <item>once every 5 days</item>
        <item>once every 6 days</item>
        <item>once every 7 days</item>
        <item>once every 14 days</item>
        <item>once every 21 days</item>
        <item>once every 30 days</item>
    </string-array>


</resources>
