<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    tools:context="ru.avb.iremember.fragments.FragmentCreateCategory">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_category"
                    android:layout_width="@android:dimen/notification_large_icon_width"
                    android:layout_height="@android:dimen/notification_large_icon_height"
                    android:layout_margin="8dp"

                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/cat_jeep" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.93">

                    <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:hint="Enter name"
                        android:paddingTop="16dp"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">


                <!--
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:ms_multiline="false"
                    app:ms_dropDownHintView="@layout/my_custom_dropdown_hint_item_layout"
                    app:ms_hintView="@layout/my_custom_hint_item_layout"
                app:ms_hint="hint"
                app:ms_enableFloatingLabel="false"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelText="floating label"
                app:ms_baseColor="@color/base"
                app:ms_highlightColor="@color/highlight"
                app:ms_errorColor="@color/error"
                app:ms_typeface="typeface.ttf"
                app:ms_thickness="2dp"
                app:ms_hintColor="@color/hint"
                app:ms_arrowColor="@color/arrow"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="false"
                app:ms_floatingLabelColor="@color/floating_label"/>
                -->

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="BetterSpinner" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/unitLabel_hint"
                        android:maxLines="1"
                        android:textAlignment="textEnd" />
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/planets_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_valueInitial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/initialValue"
                    android:theme="@style/Body2" />

                <EditText
                    android:id="@+id/editText_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="123"
                    android:inputType="number"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_valueFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/finalValue"
                    android:theme="@style/Body2" />

                <EditText
                    android:id="@+id/editTex_finalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_finalValueOptional"
                    android:inputType="number"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_valueEverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/everage_value"
                    android:theme="@style/Body2" />

                <CheckBox
                    android:id="@+id/checkBox_everageValueCalculateEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/everageValueCalculate"
                    android:theme="@style/Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_valueEverageSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:text="@string/everage_value"
                    android:theme="@style/Body2"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/everageValueCalculate_for"
                    android:theme="@style/Body2" />

                <Spinner
                    android:id="@+id/spinner_ValueEverageEventcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:entries="@array/items_everageEventCount"
                    android:theme="@style/Body2"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_operations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="-32dp"
                    android:text="@string/everageValueCalculate_operations"
                    android:theme="@style/Body2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_predictionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prediction_label"
                    android:theme="@style/Body2" />

                <CheckBox
                    android:id="@+id/checkBox_predictionEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enabled"
                    android:theme="@style/Body2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/predictionSecondLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tv_predictionSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prediction_label"
                    android:theme="@style/Body2"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_onceEvery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/onceEvery"
                    android:theme="@style/Body2" />

                <Spinner
                    android:id="@+id/spinner_redictionPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-8dp"
                    android:entries="@array/items_predictionPeriod"
                    android:textAlignment="viewStart"
                    android:theme="@style/Body2"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/days"
                    android:theme="@style/Body2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="hint" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
