<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.avb.iremember.fragments.FragmentSettings"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optionLayout4"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="visible"
        android:background="@drawable/ripple_layout_default"
        android:clickable="true"
        android:padding="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label4"
                android:theme="@style/Body1"
                android:focusable="true"
                android:ellipsize="end"
                android:text="@string/notification" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox4"
                android:checked="false"
                android:focusable="false"
                android:clickable="false" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devider1"
        android:layout_gravity="end"
        android:src="@drawable/devider_default"
        android:contentDescription="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optionLayout3"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="visible"
        android:background="@drawable/ripple_layout_default"
        android:clickable="true"
        android:padding="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label3"
                android:theme="@style/Body1"
                android:focusable="true"
                android:ellipsize="end"
                android:text="@string/language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/caption3"
                android:theme="@style/Caption"
                android:text="@string/currentLanguage"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@mipmap/locale_ru"
                android:layout_marginRight="-15dp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devider2"
        android:layout_gravity="end"
        android:src="@drawable/devider_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optionLayout2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="invisible"
        android:padding="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label2"
                android:theme="@style/Body1"
                android:focusable="true"
                android:ellipsize="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/caption2"
                android:theme="@style/Caption"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:id="@+id/buttonLanguage"
                android:theme="@style/ButtonPositive"
                android:visibility="visible"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
